# PowerGenome

./: .codecov.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  LICENSE.md  MANIFEST.ini  README.md  environment.yml  pyproj.toml  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
example_system/: GenX_settings.yml  settings_documentation.md  test_settings.yml  test_settings2.yml  test_settings_atb2020.yml  test_settings_old.yml
example_system2/: settings_documentation.md
example_system_ISONE/: test_settings.yml
example_system_efs/: settings_documentation.md  test_settings.yml
example_systems/: README.md  settings_documentation.md
multiple_cases_sample_files/: test_settings.yml
notebooks/: Existing and new generators.ipynb  Fuel costs.ipynb  Hourly demand.ipynb  Scenario management.ipynb  Select subset of hours.ipynb  Transmission.ipynb
powergenome/: .coveragerc  GenX.py  __init__.py  cluster_method.py  co2_pipeline_cost.py  distributed_gen.py  eia_opendata.py  example_settings.yml  external_data.py  extract_pudl_data.py  extract_pudl_data_cli.py  financials.py  fuels.py  generators.py  load_construction.py  load_data.py  load_profiles.py  nrelatb.py  params.py  price_adjustment.py  pudl_data_extraction.yml  pudl_data_extraction_AZ_2030.yml  pudl_data_extraction_CA_3zone_2030.yml  renewables_clusters.py  resource_clusters.py  run_powergenome_cli.py  run_powergenome_multiple_outputs_cli.py  time_reduction.py  transmission.py  us_state_abbrev.py  util.py
src/: extract_pudl_data.py  generators.py  load_profiles.py  params.py  pudl_data_extraction.yml  transmission.py  util.py
test_system/: log.txt
tests/: co2_cost_test.py  dist_gen_test.py  fuel_test.py  generation_test.py  genx_test.py  load_test.py  nrelatb_test.py  price_test.py  renewable_cluster_test.py  time_reduction_test.py  transmission_test.py  util_test.py
(+229 files in other folders)
